fix: some issues fixed

--- a/02_baselineModels.ipynb
+++ b/02_baselineModels.ipynb
@@ -703,18 +703,18 @@
     "\n",
     "# X : normalized and one-hot encoded data\n",
     "# user_df: unnormalized data\n",
-    "X, user_df = load_data(csv_path='output.log', req_thres=5, normalize_feat=True)\n",
+    "X, session_df, requests_df = load_data(csv_path='output.log', req_thres=5, normalize_feat=True)\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "chemical-recipe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_df.reset_index(inplace=True)\n",
+    "session_df.reset_index(inplace=True)\n",
     "X.reset_index(inplace=True)"
    ]
   },
@@ -725,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.drop(columns=['anomaly'], inplace=True)"
+    "#X.drop(columns=['anomaly'], inplace=True)"
    ]
   },
   {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "infinite-intermediate",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "formed-pantyhose",
    "metadata": {},
    "outputs": [
@@ -814,8 +814,8 @@
     }
    ],
    "source": [
-    "anomalies = user_df.loc[X.loc[X['anomaly'] == -1].index]\n",
-    "non_anomalies = user_df.loc[X.loc[X['anomaly'] == 1].index]\n",
+    "anomalies = session_df.loc[X.loc[X['anomaly'] == -1].index]\n",
+    "non_anomalies = session_df.loc[X.loc[X['anomaly'] == 1].index]\n",
     "\n",
     "\n",
     "print(\"Number of anomalies with is_bot == True: {}\".format(len(anomalies[anomalies['is_bot'] == True])))\n",
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "regular-bridal",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
        "[31541 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,18 +983,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "optical-bidding",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ip</th>\n",
+       "      <th>time</th>\n",
+       "      <th>method</th>\n",
+       "      <th>status_code</th>\n",
+       "      <th>path</th>\n",
+       "      <th>response_length</th>\n",
+       "      <th>user_agent</th>\n",
+       "      <th>response_time</th>\n",
+       "      <th>path_count_normalized</th>\n",
+       "      <th>path_length</th>\n",
+       "      <th>time_stamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46307</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>pages/13406543</td>\n",
+       "      <td>52125</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.005153</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46321</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>css/font_awesome.min.css</td>\n",
+       "      <td>30891</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.732447</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46323</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>images/sanjaghmaglogo1.png</td>\n",
+       "      <td>25889</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.561585</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46324</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>css/page.2f0fc69390da8cdff683.css</td>\n",
+       "      <td>50880</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.463916</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46327</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>js/page.07cb314dc14eef820638.js</td>\n",
+       "      <td>332023</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.444591</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46328</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>js/lazyload.797291581158393f5011.js</td>\n",
+       "      <td>10690</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.683537</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46329</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:56+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>js/sentry.47b4061bac0b8ac89b9c.js</td>\n",
+       "      <td>65059</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.898040</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46334</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>fonts/fontawesome_webfont.woff2?v=4.7.0</td>\n",
+       "      <td>77160</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.586109</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46336</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>fonts/sanjagh_icon_font_5.woff</td>\n",
+       "      <td>8644</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2.326355</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46337</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>fonts/IRANSansWeb_Light.woff2</td>\n",
+       "      <td>28400</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2.742880</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46338</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>images/gadgets/join_pros3.jpg</td>\n",
+       "      <td>34053</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.475430</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46339</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>images/default.jpg</td>\n",
+       "      <td>20993</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.171793</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46341</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>images/sanjagh_logo_purpule5.png</td>\n",
+       "      <td>4680</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.218701</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46342</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:57+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>images/aparat_logo.png</td>\n",
+       "      <td>1038</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.090032</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46373</th>\n",
+       "      <td>71.82.134.54</td>\n",
+       "      <td>2021-05-12 05:42:58+04:30</td>\n",
+       "      <td>Get</td>\n",
+       "      <td>200</td>\n",
+       "      <td>fonts/IRANSansWeb_Light.woff</td>\n",
+       "      <td>35709</td>\n",
+       "      <td>Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.084706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1620781978</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ip                      time method  status_code  \\\n",
+       "46307  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46321  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46323  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46324  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46327  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46328  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46329  71.82.134.54 2021-05-12 05:42:56+04:30    Get          200   \n",
+       "46334  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46336  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46337  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46338  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46339  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46341  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46342  71.82.134.54 2021-05-12 05:42:57+04:30    Get          200   \n",
+       "46373  71.82.134.54 2021-05-12 05:42:58+04:30    Get          200   \n",
+       "\n",
+       "                                          path  response_length  \\\n",
+       "46307                           pages/13406543            52125   \n",
+       "46321                 css/font_awesome.min.css            30891   \n",
+       "46323               images/sanjaghmaglogo1.png            25889   \n",
+       "46324        css/page.2f0fc69390da8cdff683.css            50880   \n",
+       "46327          js/page.07cb314dc14eef820638.js           332023   \n",
+       "46328      js/lazyload.797291581158393f5011.js            10690   \n",
+       "46329        js/sentry.47b4061bac0b8ac89b9c.js            65059   \n",
+       "46334  fonts/fontawesome_webfont.woff2?v=4.7.0            77160   \n",
+       "46336           fonts/sanjagh_icon_font_5.woff             8644   \n",
+       "46337            fonts/IRANSansWeb_Light.woff2            28400   \n",
+       "46338            images/gadgets/join_pros3.jpg            34053   \n",
+       "46339                       images/default.jpg            20993   \n",
+       "46341         images/sanjagh_logo_purpule5.png             4680   \n",
+       "46342                   images/aparat_logo.png             1038   \n",
+       "46373             fonts/IRANSansWeb_Light.woff            35709   \n",
+       "\n",
+       "                                              user_agent  response_time  \\\n",
+       "46307  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            8.0   \n",
+       "46321  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46323  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46324  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46327  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           20.0   \n",
+       "46328  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            8.0   \n",
+       "46329  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           12.0   \n",
+       "46334  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46336  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           12.0   \n",
+       "46337  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           20.0   \n",
+       "46338  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           20.0   \n",
+       "46339  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46341  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46342  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...            4.0   \n",
+       "46373  Mozilla/5.0 (Linux; Android 4.2.2; HUAWEI G730...           12.0   \n",
+       "\n",
+       "       path_count_normalized  path_length  time_stamp  \n",
+       "46307               0.005153            2  1620781976  \n",
+       "46321               1.732447            2  1620781976  \n",
+       "46323               1.561585            2  1620781976  \n",
+       "46324               1.463916            2  1620781976  \n",
+       "46327               1.444591            2  1620781976  \n",
+       "46328               2.683537            2  1620781976  \n",
+       "46329               2.898040            2  1620781976  \n",
+       "46334               2.586109            2  1620781977  \n",
+       "46336               2.326355            2  1620781977  \n",
+       "46337               2.742880            2  1620781977  \n",
+       "46338               1.475430            3  1620781977  \n",
+       "46339               1.171793            2  1620781977  \n",
+       "46341               2.218701            2  1620781977  \n",
+       "46342               2.090032            2  1620781977  \n",
+       "46373               0.084706            2  1620781978  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "top_anomalies = user_df.loc[result_df.sort_values(['score'], ascending=True).index]\n",
-    "top_non_anomalies = user_df.loc[result_df.sort_values(['score'], ascending=False).index]\n",
+    "top_anomalies = session_df.loc[result_df.sort_values(['score'], ascending=True).index]\n",
+    "top_non_anomalies = session_df.loc[result_df.sort_values(['score'], ascending=False).index]\n",
     "\n",
     "ip = top_non_anomalies.iloc[0].ip\n",
     "ua = top_non_anomalies.iloc[0].user_agent\n",
     "\n",
-    "#df[(df['ip'] == ip) & (df['user_agent'] == ua)].sort_values('time_stamp', ascending=True).head(20)\n"
+    "requests_df[(requests_df['ip'] == ip) & (requests_df['user_agent'] == ua)].sort_values('time_stamp', ascending=True).head(20)\n"
    ]
   },
   {
