fix: percentage of image requests fixed

--- a/01_sanjaghDatasetEDA.ipynb
+++ b/01_sanjaghDatasetEDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "automatic-matthew",
    "metadata": {
     "executionInfo": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "patent-amazon",
    "metadata": {
     "id": "patent-amazon",
@@ -270,7 +270,7 @@
        "[1260033 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3393,7 +3393,9 @@
    ],
    "source": [
     "# fetch the image requests\n",
-    "image_requests = df[df['path'].str.contains('images',case=False)]\n",
+    "condition_1 = df['path'].str.contains('images',case=False)\n",
+    "condition_2 = df['path'].str.endswith('.png') | df['path'].str.endswith('.jpg')\n",
+    "image_requests = df[condition_1 | condition_2]\n",
     "# create a column in user_df dataframe as \"image_count\" which contains the number of image\n",
     "# requests per user.\n",
     "user_df['image_count'] = image_requests.groupby(['ip', 'user_agent'])['path'].agg('size')\n",
