fix: log path changed

--- a/notebooks/01_sanjaghDatasetEDA.ipynb
+++ b/notebooks/01_sanjaghDatasetEDA.ipynb
@@ -279,7 +279,7 @@
    ],
    "source": [
     "# load the raw dataset\n",
-    "df = create_DataFrame(csv_path='../dataset/output.log')\n",
+    "df = create_DataFrame(log_path='../dataset/output.log')\n",
     "df"
    ]
   },
