--- a/notebooks/03_autoEncoder.ipynb
+++ b/notebooks/03_autoEncoder.ipynb
@@ -28,11 +28,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "burning-longitude",
+   "id": "refined-therapist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, session_df, requests_df = load_data(csv_path='../dataset/output.log', req_thres=4, normalize_feat=True)"
+    "X, session_df, requests_df = load_data(log_path='../dataset/output.log', req_thres=4, normalize_feat=True)"
    ]
   },
   {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binary-brother",
+   "id": "occupied-learning",
    "metadata": {},
    "outputs": [],
    "source": [
