--- a/notebooks/04_clustringFirst.ipynb
+++ b/notebooks/04_clustringFirst.ipynb
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "X, session_df, requests_df = load_data(csv_path='../dataset/output.log', req_thres=4, normalize_feat=True)"
+    "X, session_df, requests_df = load_data(log_path='../dataset/output.log', req_thres=4, normalize_feat=True)"
    ]
   },
   {
