--- a/notebooks/02_baselineModels.ipynb
+++ b/notebooks/02_baselineModels.ipynb
@@ -30,13 +30,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LOADING THE DATASET...\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -129,7 +122,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>-1.602867</td>\n",
+       "      <td>-1.557080</td>\n",
        "      <td>-0.008371</td>\n",
        "      <td>0.854435</td>\n",
        "      <td>-0.085963</td>\n",
@@ -154,7 +147,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>0.033177</td>\n",
+       "      <td>0.005863</td>\n",
        "      <td>-0.003628</td>\n",
        "      <td>0.186140</td>\n",
        "      <td>-0.085809</td>\n",
@@ -179,7 +172,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>-1.602867</td>\n",
+       "      <td>-1.557080</td>\n",
        "      <td>-0.004768</td>\n",
        "      <td>0.765010</td>\n",
        "      <td>-0.085954</td>\n",
@@ -204,7 +197,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>-1.602867</td>\n",
+       "      <td>-1.557080</td>\n",
        "      <td>-0.014490</td>\n",
        "      <td>-0.343457</td>\n",
        "      <td>0.398518</td>\n",
@@ -229,7 +222,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>0.442187</td>\n",
+       "      <td>0.396599</td>\n",
        "      <td>-0.008088</td>\n",
        "      <td>0.282094</td>\n",
        "      <td>-0.085995</td>\n",
@@ -279,7 +272,7 @@
        "      <td>4.224926</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>0.033177</td>\n",
+       "      <td>0.005863</td>\n",
        "      <td>-0.011700</td>\n",
        "      <td>0.204127</td>\n",
        "      <td>-0.085982</td>\n",
@@ -303,7 +296,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>1.774162</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>0.442187</td>\n",
+       "      <td>0.396599</td>\n",
        "      <td>-0.014089</td>\n",
        "      <td>-0.303955</td>\n",
        "      <td>-0.086031</td>\n",
@@ -327,7 +320,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>0.999930</td>\n",
+       "      <td>0.929420</td>\n",
        "      <td>-0.006803</td>\n",
        "      <td>0.133794</td>\n",
        "      <td>-0.085995</td>\n",
@@ -351,7 +344,7 @@
        "      <td>-0.102574</td>\n",
        "      <td>-0.718296</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>1.123872</td>\n",
+       "      <td>1.047825</td>\n",
        "      <td>-0.006968</td>\n",
        "      <td>0.145879</td>\n",
        "      <td>-0.086005</td>\n",
@@ -376,7 +369,7 @@
        "      <td>0.030288</td>\n",
        "      <td>-0.223841</td>\n",
        "      <td>-0.018601</td>\n",
-       "      <td>-0.070870</td>\n",
+       "      <td>-0.093535</td>\n",
        "      <td>0.275806</td>\n",
        "      <td>1.395729</td>\n",
        "      <td>-0.084034</td>\n",
@@ -395,7 +388,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>31541 rows × 80 columns</p>\n",
+       "<p>31541 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -471,17 +464,17 @@
        "\n",
        "                                                                  image_count(%)  \\\n",
        "ip            user_agent                                                           \n",
-       "1.81.122.235  Mozilla/5.0 (iPhone; CPU iPhone OS 14_6 like Ma...       -1.602867   \n",
-       "10.92.2.8     Mozilla/5.0 (Linux; Android 6.0.1; SAMSUNG SM-A...        0.033177   \n",
-       "100.92.35.41  Mozilla/5.0 (Linux; Android 9; SM-A205F) AppleW...       -1.602867   \n",
-       "102.0.232.185 Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...       -1.602867   \n",
-       "102.0.232.220 Mozilla/5.0 (Linux; Android 11; SM-A505F) Apple...        0.442187   \n",
+       "1.81.122.235  Mozilla/5.0 (iPhone; CPU iPhone OS 14_6 like Ma...       -1.557080   \n",
+       "10.92.2.8     Mozilla/5.0 (Linux; Android 6.0.1; SAMSUNG SM-A...        0.005863   \n",
+       "100.92.35.41  Mozilla/5.0 (Linux; Android 9; SM-A205F) AppleW...       -1.557080   \n",
+       "102.0.232.185 Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...       -1.557080   \n",
+       "102.0.232.220 Mozilla/5.0 (Linux; Android 11; SM-A505F) Apple...        0.396599   \n",
        "...                                                                          ...   \n",
-       "99.239.78.14  Mozilla/5.0 (MSIE 10.0; Windows NT 6.1; WOW64; ...        0.033177   \n",
-       "              Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...        0.442187   \n",
-       "              Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...        0.999930   \n",
-       "              Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleW...        1.123872   \n",
-       "99.239.97.147 Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:89...       -0.070870   \n",
+       "99.239.78.14  Mozilla/5.0 (MSIE 10.0; Windows NT 6.1; WOW64; ...        0.005863   \n",
+       "              Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...        0.396599   \n",
+       "              Mozilla/5.0 (Windows NT 10.0; Win64; x64) Apple...        0.929420   \n",
+       "              Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleW...        1.047825   \n",
+       "99.239.97.147 Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:89...       -0.093535   \n",
        "\n",
        "                                                                  total_response_length  \\\n",
        "ip            user_agent                                                                  \n",
@@ -693,7 +686,7 @@
        "              Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleW...       0  \n",
        "99.239.97.147 Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:89...       0  \n",
        "\n",
-       "[31541 rows x 80 columns]"
+       "[31541 rows x 81 columns]"
       ]
      },
      "execution_count": 3,
@@ -706,7 +699,7 @@
     "\n",
     "# X : normalized and one-hot encoded data\n",
     "# user_df: unnormalized data\n",
-    "X, session_df, requests_df = load_data(csv_path='../dataset/output.log', req_thres=5, normalize_feat=True)\n",
+    "X, session_df, requests_df = load_data(log_path='../dataset/output.log', req_thres=5, normalize_feat=True)\n",
     "X"
    ]
   },
