--- a/notebooks/05_nlpApproaches.ipynb
+++ b/notebooks/05_nlpApproaches.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "X, session_df, requests_df = load_data(csv_path='output.log', req_thres=4, normalize_feat=True)"
+    "X, session_df, requests_df = load_data(log_path='../dataset/output.log', req_thres=4, normalize_feat=True)"
    ]
   },
   {
